# tic-tac-toe

./: CMakeLists.txt  CMakeLists.txt.user.9c37bbd  Final code.cpp  Final main.cpp  Main vector.cpp  One code only using array to stack or using vector  README.md  Vector.cpp  Vector.hpp  array.cpp  array.hpp  gameLogic.cpp  gameStructure.h  main array.cpp  main.cpp  test.cpp
.github/workflows/: release.yml  superlinter.yml
GUI/: TicTacToeHome.pro.user.5500547  TicTacToeHome.pro.user.9c37bbd  images.qrc  login.ui  mainwindow.cpp  mainwindow.ui  mainwindow.ui.autosave  resources.qrc
Gui_cmake/: CMakeLists.txt  CMakeLists.txt.user.5500547  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Gui_cmake/Gui_cmake/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  resources.qrc
assets/: resources.qrc
bcrypt/: CMakeLists.txt
bcrypt/Include/: bcrypt.h
bcrypt/src/: bcrypt.cpp
include/: ai.h  database.h  gameStructure.h  mainwindow.h  replay headers  windows_stub.h
sqlite/: CMakeLists.txt
src/: ai.cpp  ailevelwindow.cpp  changepasswordwindow.cpp  changeusernamewindow.cpp  chooseiconwindow.cpp  database.cpp  gameStructure.cpp  gamehistorywindow.cpp  gamemodewindow.cpp  gridwindow.cpp  loginwindow.cpp  main-1.cpp  main.cpp  mainwindow.cpp  megagridwindow.cpp  megareplaywindow.cpp  normalreplaywindow.cpp  profilewindow.cpp  settingswindow.cpp  signupwindow.cpp
tests/: AItests.cpp  PtestForAi.cpp  PtestForDB.cpp  PtestForGame.cpp  database_googletest.cpp  database_tests.cpp  googletest-database.cpp  megatests.cpp  perfomance_gamestructure.cpp  performance_ai.cpp  pvptests.cpp
ui/: mainwindow.ui  mainwindow.ui.autosave
windows_stub/: CMakeLists.txt
windows_stub/include/: windows_stub.h
windows_stub/src/: windows_stub.cpp
